HomeWork 4.5 step1,2